# spotify-mcp-history-collector

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  environment.yml  pyproject.toml  pyrightconfig.json  spec.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
deploy/: Caddyfile  authenticated-emails.txt  provision.sh
docs/: chatgpt-gpt-setup.md  chatgpt-integration.md  chatgpt-openapi.json  chatgpt-openapi.yaml  deployment.md  digitalocean-deployment.md  google-oauth-setup.md  implementation_plan.md  mcp_memory_prd.md  phase4_plan.md  phase5-plan.md  phase5_testing_guide.md  phase5_zip_import.md  phase6-plan.md  phase6_plan.md  phase6_summary.md  phase7_plan.md  phase7_summary.md  phase8-taste-ui-plan.md  phase8_plan.md  phase8_summary.md  phase9_final_plan.md  plan-v2.md  playlist_and_track_info_plan.md  progress.md  troubleshooting.md
services/api/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema.py  002_timestamp_to_timestamptz.py  003_spotify_cache_tables.py  004_rbac_tables.py  005_user_spotify_credentials.py  006_memory_taste.py
services/api/src/app/: constants.py  dependencies.py  main.py  middleware.py  settings.py
services/api/src/app/admin/: __init__.py  auth.py  router.py  schemas.py  service.py
services/api/src/app/auth/: __init__.py  crypto.py  dependencies.py  exceptions.py  jwt.py  middleware.py  permissions.py  router.py  schemas.py  service.py  state.py  tokens.py
services/api/src/app/cache/: __init__.py  service.py
services/api/src/app/db/: __init__.py  models.py  session.py
services/api/src/app/explorer/: router.py  schemas.py  service.py
services/api/src/app/history/: __init__.py  queries.py  router.py  schemas.py  service.py
services/api/src/app/logging/: __init__.py  formatter.py  setup.py
services/api/src/app/mcp/: __init__.py  registry.py  router.py  schemas.py
services/api/src/app/mcp/tools/: __init__.py  history_tools.py  memory_tools.py  ops_tools.py  playlist_tools.py  spotify_tools.py
services/api/src/app/spotify/: __init__.py
services/api/tests/: conftest.py
services/api/tests/test_admin/: test_auth.py  test_credentials.py  test_import_upload.py  test_logs.py  test_operations.py  test_rbac.py  test_users.py
services/api/tests/test_auth/: test_crypto.py  test_jwt.py  test_jwt_endpoints.py  test_jwt_middleware.py  test_router.py  test_state.py  test_state_payload.py  test_token_credentials.py  test_tokens.py
services/api/tests/test_cache/: test_service.py
services/api/tests/test_db/: test_import_operations.py  test_operations.py
services/api/tests/test_explorer/: test_auth_redirect.py  test_endpoints.py  test_taste_endpoints.py
services/api/tests/test_history/: test_queries.py  test_router.py  test_service.py
services/api/tests/test_mcp/: conftest.py  test_history_tools.py  test_memory_tools.py  test_ops_tools.py  test_playlist_tools.py  test_registry.py  test_router.py
services/api/tests/test_rbac/: test_models.py  test_permissions.py  test_require_permission.py
services/api/tests/test_spotify/: test_client.py  test_models.py
services/api/tests/test_zip_import/: test_normalizers.py  test_parser.py
services/collector/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/collector/src/collector/: db.py  initial_sync.py  job_tracking.py  main.py  polling.py  runloop.py  settings.py  tokens.py  zip_import.py
services/collector/tests/: conftest.py  test_initial_sync.py  test_job_tracking.py  test_polling.py  test_runloop.py  test_settings.py  test_token_credentials.py  test_tokens.py  test_zip_import_service.py
services/explorer/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/explorer/src/explorer/: api_client.py  main.py  middleware.py  settings.py
services/explorer/src/explorer/routes/: __init__.py  _helpers.py  auth.py  dashboard.py  history.py  landing.py  playlists.py  profile.py  taste.py
services/explorer/src/explorer/templates/: base.html  dashboard.html  history.html  landing.html  login.html  playlist_detail.html  playlists.html  profile.html  taste.html
services/explorer/tests/: conftest.py  test_api_client.py  test_routes.py
services/frontend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/frontend/src/frontend/: api_client.py  main.py  settings.py
services/frontend/tests/: conftest.py  test_api_client.py  test_routes.py
services/shared/: pyproject.toml  requirements.txt
services/shared/src/shared/: __init__.py  crypto.py
services/shared/src/shared/config/: __init__.py  constants.py  database.py
services/shared/src/shared/db/: __init__.py  base.py  enums.py  operations.py  session.py
services/shared/src/shared/db/models/: __init__.py  cache.py  log.py  memory.py  music.py  operations.py  rbac.py  user.py
services/shared/src/shared/logging/: __init__.py  handler.py
services/shared/src/shared/spotify/: __init__.py  client.py  constants.py  exceptions.py  models.py
services/shared/src/shared/zip_import/: __init__.py  constants.py  models.py  normalizers.py  parser.py
(+30 files in other folders)
