[project]
name = "spotify-mcp-shared"
version = "0.1.0"
description = "Shared database package for Spotify MCP services"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "httpx>=0.27.2",
    "cryptography>=44.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
# UP042: safe on >=3.14 -- see root pyproject.toml for rationale
extend-safe-fixes = ["UP042"]

[tool.ruff.lint.isort]
known-first-party = ["shared"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
